--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 1cb00eb98
+	base = c5a624a7c
 	trim = ros2_control
-	trimbase = 
+	trimbase = 1cb00eb98
