--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = b1aab64c7
+	base = f078f8b8d
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = b1aab64c7
