--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = e7da2b673
+	base = 470b9e961
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = e7da2b673
