--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 6b8b40b39
+	base = 03f213a7a
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 6b8b40b39
