--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 3d86d0afe
+	base = 0b31846e8
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 3d86d0afe
