--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 6bfd1bc6e
+	base = ccb01f9df
 	trim = joint_limits
-	trimbase = 
+	trimbase = 6bfd1bc6e
