--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 8e684d6c4
+	base = eda7cdd2e
 	trim = transmission_interface
-	trimbase = 
+	trimbase = 8e684d6c4
