--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = d05b4276e
+	base = 395b7235a
 	trim = controller_interface
-	trimbase = 
+	trimbase = d05b4276e
