--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 081aa2301
+	base = 49f49ddf0
 	trim = controller_manager
-	trimbase = 
+	trimbase = 081aa2301
