--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 9d52705f6
+	base = dff55affa
 	trim = hardware_interface
-	trimbase = 
+	trimbase = 9d52705f6
