--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 113f07536
+	base = fc1168c74
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 113f07536
