--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = b28db82ff
+	base = fbea9899d
 	trim = ros2_control
-	trimbase = 
+	trimbase = b28db82ff
