--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 7f6cfe7e4
+	base = 63c746168
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 7f6cfe7e4
