--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = fb8757f2d
+	base = 3d413d454
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = fb8757f2d
