--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 0d9ce6043
+	base = 3533e02e6
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 0d9ce6043
