--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 5fc9dbf04
+	base = ceb51e8a5
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 5fc9dbf04
