--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 7df117480
+	base = b4023f495
 	trim = joint_limits
-	trimbase = 
+	trimbase = 7df117480
