--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = b3b8fec2b
+	base = a10cc3120
 	trim = transmission_interface
-	trimbase = 
+	trimbase = b3b8fec2b
