--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 46a4fd028
+	base = 544ac11c4
 	trim = controller_interface
-	trimbase = 
+	trimbase = 46a4fd028
