--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = 2fe9584ce
+	base = c06ad0c62
 	trim = controller_manager
-	trimbase = 
+	trimbase = 2fe9584ce
