--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = e323ca209
+	base = e48521b86
 	trim = hardware_interface
-	trimbase = 
+	trimbase = e323ca209
