--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ec3a42a78
-	base = ff1edab3f
+	base = baae341cc
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = ff1edab3f
