--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 4d0029a9b
+	base = 64bcd3d46
 	trim = ros2_control
-	trimbase = 
+	trimbase = 4d0029a9b
