--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 5a0233a28
+	base = cef44d7d0
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 5a0233a28
