--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = fb5523c79
+	base = b3aff2bcb
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = fb5523c79
