--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 167949abb
+	base = 39e8345b7
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 167949abb
