--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 4c8f02a8e
+	base = 858624866
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 4c8f02a8e
