--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 85d0c0928
+	base = fa87d7b5f
 	trim = joint_limits
-	trimbase = 
+	trimbase = 85d0c0928
