--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = dacfe37d1
+	base = dac624967
 	trim = transmission_interface
-	trimbase = 
+	trimbase = dacfe37d1
