--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 40543c5fd
+	base = 737f618a0
 	trim = controller_interface
-	trimbase = 
+	trimbase = 40543c5fd
