--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 2c515fb0e
+	base = 43fe59e20
 	trim = controller_manager
-	trimbase = 
+	trimbase = 2c515fb0e
