--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 78a1e9229
+	base = 68ea48bbd
 	trim = hardware_interface
-	trimbase = 
+	trimbase = 78a1e9229
