--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26b1d618f
-	base = 8fd15c232
+	base = 929719233
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 8fd15c232
