--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = e68ca991d
+	base = 8043f4778
 	trim = ros2_control
-	trimbase = 
+	trimbase = e68ca991d
