--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 58eebd8a3
+	base = 5f09ce6b8
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 58eebd8a3
