--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 4d67782f3
+	base = 7f09cdc3e
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 4d67782f3
