--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 87f62a754
+	base = 116df3a7f
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 87f62a754
