--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 62bb16ca0
+	base = 65f922917
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 62bb16ca0
