--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = b12e37408
+	base = e1e9932ee
 	trim = joint_limits
-	trimbase = 
+	trimbase = b12e37408
