--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 1e290b651
+	base = f1f4c95ea
 	trim = transmission_interface
-	trimbase = 
+	trimbase = 1e290b651
