--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = e1439a8c3
+	base = df8894564
 	trim = controller_interface
-	trimbase = 
+	trimbase = e1439a8c3
