--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = a9d44da3b
+	base = d18a68df9
 	trim = controller_manager
-	trimbase = 
+	trimbase = a9d44da3b
