--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 0a78b1638
+	base = 243b5289f
 	trim = hardware_interface
-	trimbase = 
+	trimbase = 0a78b1638
