--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 30be105d7
-	base = 98d0b7b57
+	base = 1c8c81f70
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 98d0b7b57
