--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 04e3f2f92
+	base = 5b4e24af6
 	trim = ros2_control
-	trimbase = 
+	trimbase = 04e3f2f92
