--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 40db369c3
+	base = 443666372
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 40db369c3
