--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 89b314fd6
+	base = e5d3e8fbb
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 89b314fd6
