--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 5a2719a7c
+	base = e8420223b
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 5a2719a7c
