--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = bab1b9ded
+	base = 497fd4feb
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = bab1b9ded
