--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = d45644c7f
+	base = be6c80dfc
 	trim = joint_limits
-	trimbase = 
+	trimbase = d45644c7f
