--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = d3673748e
+	base = 505bcb3c8
 	trim = transmission_interface
-	trimbase = 
+	trimbase = d3673748e
