--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = a66d9419a
+	base = 8149471be
 	trim = controller_interface
-	trimbase = 
+	trimbase = a66d9419a
