--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 9f817f686
+	base = 6cb61373c
 	trim = controller_manager
-	trimbase = 
+	trimbase = 9f817f686
