--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = bc7ef399e
+	base = 6f0e88152
 	trim = hardware_interface
-	trimbase = 
+	trimbase = bc7ef399e
