--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 9ba1b0313
+	base = 792fbdfca
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 9ba1b0313
