--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 230e11216
+	base = 4327471b4
 	trim = ros2_control
-	trimbase = 
+	trimbase = 230e11216
