--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = b5b2fa3ba
+	base = 90a3d4802
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = b5b2fa3ba
