--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 8169a43a4
+	base = 708344170
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 8169a43a4
