--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 227f5fc02
+	base = d8bafbb15
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 227f5fc02
