--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 03f3e5043
+	base = a1674307a
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 03f3e5043
