--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = a8598812c
+	base = 00290ccc5
 	trim = joint_limits
-	trimbase = 
+	trimbase = a8598812c
