--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = d98553db7
+	base = cb3c2e8ff
 	trim = transmission_interface
-	trimbase = 
+	trimbase = d98553db7
