--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 4e950e3aa
+	base = b897d7257
 	trim = controller_interface
-	trimbase = 
+	trimbase = 4e950e3aa
