--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = a81cab86b
+	base = 25f5fca17
 	trim = controller_manager
-	trimbase = 
+	trimbase = a81cab86b
