--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 0cddebe8f
+	base = 759294460
 	trim = hardware_interface
-	trimbase = 
+	trimbase = 0cddebe8f
