--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 59210bfc9
-	base = 42d9b9803
+	base = 0d5562785
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 42d9b9803
