--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = c1ec5f961
+	base = 78c179ee2
 	trim = ros2_control
-	trimbase = 
+	trimbase = c1ec5f961
