--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = e51604c55
+	base = 6ed389c33
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = e51604c55
