--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 6aa00d3d5
+	base = 4286f9b9d
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 6aa00d3d5
