--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 047f61b07
+	base = efd643ace
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 047f61b07
