--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 2f7a6f4fa
+	base = c17c208fd
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 2f7a6f4fa
