--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = ff5703fd7
+	base = 9f7d0e5b4
 	trim = joint_limits
-	trimbase = 
+	trimbase = ff5703fd7
