--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 810c5fe1e
+	base = ad86ec189
 	trim = transmission_interface
-	trimbase = 
+	trimbase = 810c5fe1e
