--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 6f8ae75c1
+	base = f0de5bacf
 	trim = controller_interface
-	trimbase = 
+	trimbase = 6f8ae75c1
