--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 2740392f5
+	base = da1227486
 	trim = controller_manager
-	trimbase = 
+	trimbase = 2740392f5
