--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = e69f54968
+	base = e88207217
 	trim = hardware_interface
-	trimbase = 
+	trimbase = e69f54968
