--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = b7ceb5a76
+	base = 3768454cf
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = b7ceb5a76
