--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 9484ca41d
+	base = 4cac9bf10
 	trim = ros2_control
-	trimbase = 
+	trimbase = 9484ca41d
