--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 05fa3adf5
+	base = 2bbc0e1b4
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 05fa3adf5
