--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 37d56247b
+	base = abf0b7fb0
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 37d56247b
