--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 4d7863134
+	base = 652052558
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 4d7863134
