--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = f54653d0c
+	base = 62dc0aacc
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = f54653d0c
