--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 0e49eebef
+	base = 0cc8209e5
 	trim = joint_limits
-	trimbase = 
+	trimbase = 0e49eebef
