--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 96143d3e1
+	base = 3be2fc16e
 	trim = transmission_interface
-	trimbase = 
+	trimbase = 96143d3e1
