--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = c18bebb82
+	base = 3a0388e8e
 	trim = controller_interface
-	trimbase = 
+	trimbase = c18bebb82
