--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = 37bced5e9
+	base = 7fc492da6
 	trim = controller_manager
-	trimbase = 
+	trimbase = 37bced5e9
