--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = de33c6b49
+	base = 85d73156d
 	trim = hardware_interface
-	trimbase = 
+	trimbase = de33c6b49
