--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 7aacd7cd4
-	base = e4b9cc7b6
+	base = 21ae685a4
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = e4b9cc7b6
