--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 9b7b129a1
+	base = 2d142736c
 	trim = ros2_control
-	trimbase = 
+	trimbase = 9b7b129a1
