--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 61765e496
+	base = 7d5a2dc11
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 61765e496
