--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 5aeee2966
+	base = 443edb968
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 5aeee2966
