--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 4827c0d84
+	base = daa35dd0e
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 4827c0d84
