--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 3249f88d3
+	base = 2f907b078
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 3249f88d3
