--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 6f2766d9c
+	base = 193c644b6
 	trim = joint_limits
-	trimbase = 
+	trimbase = 6f2766d9c
