--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 010f1a35d
+	base = 50dae3c23
 	trim = transmission_interface
-	trimbase = 
+	trimbase = 010f1a35d
