--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = b77216683
+	base = ec830cbd3
 	trim = controller_interface
-	trimbase = 
+	trimbase = b77216683
