--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = a0e3401c8
+	base = 5b1430323
 	trim = controller_manager
-	trimbase = 
+	trimbase = a0e3401c8
