--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = c94caac45
+	base = 586d50785
 	trim = hardware_interface
-	trimbase = 
+	trimbase = c94caac45
