--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = ed065982b
-	base = 30c675bfc
+	base = 391e30975
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 30c675bfc
