--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = db8417798
+	base = 2825f460d
 	trim = ros2_control
-	trimbase = 
+	trimbase = db8417798
