--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 4ef61ab5e
+	base = 3f73e4720
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 4ef61ab5e
