--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 03d93fd18
+	base = 4b1ea9d3a
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = 03d93fd18
