--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 9d1c847a4
+	base = ce44249d7
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 9d1c847a4
