--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 0f30a28af
+	base = c865e016c
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = 0f30a28af
