--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = df00f5be9
+	base = f842ffdae
 	trim = joint_limits
-	trimbase = 
+	trimbase = df00f5be9
