--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 345610c0d
+	base = d78099b4e
 	trim = transmission_interface
-	trimbase = 
+	trimbase = 345610c0d
