--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 696137f27
+	base = 1dcf0f485
 	trim = controller_interface
-	trimbase = 
+	trimbase = 696137f27
