--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 888dae9c2
+	base = c3843e6cc
 	trim = controller_manager
-	trimbase = 
+	trimbase = 888dae9c2
