--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = a9a42c709
+	base = 5e2b3f6e5
 	trim = hardware_interface
-	trimbase = 
+	trimbase = a9a42c709
