--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 26151f459
-	base = 0f14f8a77
+	base = 8c0e1836a
 	trim = hardware_interface_testing
-	trimbase = 
+	trimbase = 0f14f8a77
