--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3bfd1824d
-	base = a8527587d
+	base = 4d45ee43c
 	trim = ros2_control
-	trimbase = 
+	trimbase = a8527587d
