--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3bfd1824d
-	base = 2cff5480c
+	base = e0015c7d3
 	trim = ros2controlcli
-	trimbase = 
+	trimbase = 2cff5480c
