--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3bfd1824d
-	base = d6c2522c7
+	base = d6b546943
 	trim = ros2_control_test_assets
-	trimbase = 
+	trimbase = d6c2522c7
