--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3bfd1824d
-	base = 35d41db8d
+	base = cc5f5ddd4
 	trim = rqt_controller_manager
-	trimbase = 
+	trimbase = 35d41db8d
