--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3bfd1824d
-	base = f693a4730
+	base = 0de95d24e
 	trim = controller_manager_msgs
-	trimbase = 
+	trimbase = f693a4730
