--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 3bfd1824d
-	base = 09102e3cd
+	base = c6d19f3dd
 	trim = joint_limits
-	trimbase = 
+	trimbase = 09102e3cd
